java 9 migration aids